# tensorflow-learn

./: .gitignore  AAPL_stocks.csv  README.md  pyproject.toml  scaler.pkl
apps/lstm/: pyproject.toml
apps/lstm/src/: load-model.py  main.py
apps/stocks/: pyproject.toml
apps/stocks/src/: predict.py  train.py
